<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundGray"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <include layout="@layout/title_bar_promoter" />

    <Spinner
        android:id="@+id/spinnerCountry"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:spinnerMode="dialog"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_14sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray" />

    <Spinner
        android:id="@+id/spinnerState"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:prompt="@string/selectState"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_14sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray" />

    <Spinner
        android:id="@+id/spinnerCity"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:prompt="@string/selectCity"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_14sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/btnSelect"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/blue"
        android:text="@string/select"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14ssp" />
</LinearLayout>