<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backGroundGray"
    android:orientation="vertical"
    tools:context="com.smubator.adwitter.Promoter.fragment.PromoterProfileFrag">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/userProfile"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_gravity="center"
        app:civ_border_width="@dimen/_1sdp"
        app:civ_border_color="@color/blue"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/mode_selection_promoter_avatar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">

        <com.smubator.adwitter.CustomFonts.MyCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text=":"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <com.smubator.adwitter.CustomFonts.MyCustomTextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="John Doe"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">

        <com.smubator.adwitter.CustomFonts.MyCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text=":"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <com.smubator.adwitter.CustomFonts.MyCustomTextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="Ibrahim@adwitter.com"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">

        <com.smubator.adwitter.CustomFonts.MyCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text=":"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <com.smubator.adwitter.CustomFonts.MyCustomTextView
            android:id="@+id/tvLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="Englisg"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">

        <com.smubator.adwitter.CustomFonts.MyCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text=":"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <com.smubator.adwitter.CustomFonts.MyCustomTextView
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="male"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">

        <com.smubator.adwitter.CustomFonts.MyCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/accountSstatus"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text=":"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"

            android:focusableInTouchMode="false">

            <RadioButton
                android:id="@+id/rbActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:enabled="false"
                android:buttonTint="@color/blue"

                android:text="@string/active"
                android:textSize="@dimen/_14sdp" />

            <RadioButton
                android:id="@+id/rbInactive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:enabled="false"
                android:layout_marginTop="@dimen/_5sdp"
                android:buttonTint="@color/blue"
                android:text="@string/InActive"
                android:textSize="@dimen/_14sdp" />

        </RadioGroup>
    </LinearLayout>


</LinearLayout>
