<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.smubator.adwitter.Promoter.activity.TrackOrderActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:src="@drawable/down_arrow" />

            <ImageView
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_140sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_70sdp"
                android:src="@drawable/tick_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                android:text="@string/congrats"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/admitIt"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/_10ssp" />

            <Button
                android:id="@+id/btnTrackMyOrder"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_60sdp"
                android:background="@drawable/bgpaymentbtn"
                android:foregroundGravity="center"
                android:text="@string/trackmyorder"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>