<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/mode_selection_background" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_8sdp"
        android:background="@drawable/background_button">

        <com.smubator.adwitter.CustomFonts.MyCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/selectMode"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/down_arrow"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/linearContentOwner"
            android:layout_width="@dimen/_185sdp"
            android:layout_height="@dimen/_145sdp"
            android:layout_above="@+id/view"
            android:layout_centerHorizontal="true"
            android:background="@drawable/mode_selection_rectangle"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/mode_selection_content_owner_avatar" />

            <com.smubator.adwitter.CustomFonts.MyCustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/contentOwner"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold" />

            <com.smubator.adwitter.CustomFonts.MyCustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:text="@string/contentOwnerText"
                android:textColor="#9293A0"
                android:textSize="@dimen/_9ssp" />

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp" />

        <LinearLayout
            android:id="@+id/linearPromoter"
            android:layout_width="@dimen/_185sdp"
            android:layout_height="@dimen/_145sdp"
            android:layout_below="@+id/view"
            android:layout_centerHorizontal="true"
            android:background="@drawable/mode_selection_rectangle"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/mode_selection_promoter_avatar" />

            <com.smubator.adwitter.CustomFonts.MyCustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/promoter"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold" />

            <com.smubator.adwitter.CustomFonts.MyCustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:text="@string/promoterText"
                android:textColor="#9293A0"
                android:textSize="@dimen/_9ssp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivCross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/mode_selection_cross"
            android:visibility="invisible" />

    </RelativeLayout>

</RelativeLayout>