<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/linearDots"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_40sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivFirst"
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_above="@+id/ivSecond"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:src="@drawable/blue_point" />

                <ImageView
                    android:id="@+id/ivSecond"
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10ssp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/gray_point" />

                <ImageView
                    android:id="@+id/ivThird"
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10ssp"
                    android:layout_below="@+id/ivSecond"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/gray_point" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/linearDots"
                android:layout_toRightOf="@+id/linearDots"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_220sdp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/image" />
                </RelativeLayout>

                <com.smubator.adwitter.CustomFonts.MyCustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/profileSetup"
                    android:textColor="#828393"
                    android:textSize="@dimen/_13ssp" />

                <com.smubator.adwitter.CustomFonts.MyCustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/promoterAccount"
                    android:textColor="#2A2A30"
                    android:textSize="@dimen/_35ssp"
                    android:textStyle="bold" />

                <com.smubator.adwitter.CustomFonts.MyCustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:adjustViewBounds="true"
                    android:text="@string/promoterText1"
                    android:textColor="#828393"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/ivArrowRight"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_55sdp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:src="@drawable/btn_intro_right_arrow" />

</RelativeLayout>